sidecarpod.yaml
# DO NOT edit this file
# Edit sidecar-local.yml if you're working on a local cluster on your computer or laptop
# Edit sidecar-cloud.yml if you're working on a cluster in the cloud

apiVersion: v1
kind: Pod
metadata:
  name: git-sync
  labels:
    app: sidecar
spec:
  containers:
  - name: ctr-web
    image: nginx
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/
  - name: ctr-sync
    image: k8s.gcr.io/git-sync:v3.1.6
    volumeMounts:
    - name: html
      mountPath: /tmp/git
  volumes:
  - name: html
    emptyDir: {}
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: svc-sidecar
# spec:
#   selector:
#     app: sidecarsyn
#   ports:
#   - port: 80
#   type: NodePort
