ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cohort5.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-sidecar 
            port:
              number: 80
